--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       </div>
     </section>
 
+    <!-- P3 Section Area -->
     <section class="p3-airport-area">
       <div class="container">
         <div class="title-bar">
@@ -261,6 +262,7 @@
         </div>
       </div>
     </section>
+    <!-- P3 Section Area -->
 
     <section class="awards animation">
       <div class="container">
