--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <!-- P3 Section Area -->
+    <!-- P3 Airport Area -->
     <section class="p3-airport-area">
       <div class="container">
         <div class="title-bar">
@@ -110,7 +110,7 @@
 
             <div class="tab-cont">
               <!-- Single Tab Content -->
-              <div class="tab-pane active">
+              <div class="tab-pane tab-pane1 active">
                 <div class="tab-basic-content">
                   <div class="tab-basic-content__intro">
                     <h3>Private Capital for P3 Development</h3>
@@ -147,7 +147,7 @@
               <!-- Single Tab Content -->
 
               <!-- Single Tab Content -->
-              <div class="tab-pane">
+              <div class="tab-pane tab-pane2">
                 <div class="tab-basic-content">
                   <div class="tab-basic-content__intro">
                     <h3>Passenger Terminal Development & Operations</h3>
@@ -184,7 +184,7 @@
               <!-- Single Tab Content -->
 
               <!-- Single Tab Content -->
-              <div class="tab-pane">
+              <div class="tab-pane tab-pane3">
                 <div class="tab-basic-content">
                   <div class="tab-basic-content__intro">
                     <h3>Airport Development & Engineering</h3>
@@ -222,7 +222,7 @@
               <!-- Single Tab Content -->
 
               <!-- Single Tab Content -->
-              <div class="tab-pane">
+              <div class="tab-pane tab-pane4">
                 <div class="tab-basic-content">
                   <div class="tab-basic-content__intro">
                     <h3>Fixed-Based Operations Services</h3>
@@ -262,7 +262,7 @@
         </div>
       </div>
     </section>
-    <!-- P3 Section Area -->
+    <!-- P3 airport Area -->
 
     <section class="awards animation">
       <div class="container">
